Some refactoring and additional documentation

--- a/MoonSweep.ipynb
+++ b/MoonSweep.ipynb
@@ -6,20 +6,25 @@
    "source": [
     "# Sweep laser pointer across the Moon from Earth\n",
     "\n",
-    "Plan: \n",
+    "## Scenario\n",
+    "A laser pointer on earth is pointed towards the Moon and swept across the Moon surface along a a straight line left to right. The laser hits the Moon along a circle through the center of the observable Moon disk. \n",
+    "\n",
+    "The calculations use spherical coordinates on the Moon such that line of incidence is zero altitude and sweeps from positive to negative latitude.\n",
+    "\n",
+    "## Plan \n",
     "Use SymPy to:\n",
     "1. Derive formula for distance Earth - Moon surface as a function of the sweep angle from Earth perspective\n",
     "2. Derive formula for the arrival time as a function of the sweep angle, under consideration of the sweep angular speed\n",
     "\n",
     "Plot the following:\n",
-    "- Arrival time vs sweep angle\n",
-    "- Moon surface location vs sweep angle\n",
+    "- Arrival time vs sweep angle or start time when photon left the laser pointer\n",
+    "- Moon surface location (latitude( vs sweep angle or start time\n",
     "...\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,19 +34,19 @@
     "# Parameters for the calculations\n",
     "\n",
     "c = symbols('c', positive=True ) # Speed of light in vacuum\n",
-    "R = symbols('R', positive=True ) # Radius of the Moon (target sphere)\n",
-    "D = symbols('D', positive=True ) # Distance Earth to Moon center\n",
+    "R = symbols('R', positive=True ) # Radius of the target sphere (Moon)\n",
+    "D = symbols('D', positive=True ) # Distance laser pointer to target sphere center (Earth to Moon center)\n",
     "alpha = symbols('alpha')         # Angle of laser pointer direction\n",
-    "omega = symbols('omega')         # Angular velocity of laser pointer movement\n",
+    "omega = symbols('omega')         # Angular velocity of laser pointer sweep movement\n",
     "T = symbols('T')                 # Sweep duration\n",
     "L = symbols('L', positive=True ) # Flight path length (distance Earth - Moon surface point)\n",
-    "a, b = symbols('a b')            # coordinates of Moon surface point\n",
-    "t = symbols('t')                 # time in seconds\n"
+    "a, b = symbols('a b')            # Coordinates of target sphere (Moon) surface point\n",
+    "t = symbols('t')                 # Time in seconds: elapsed time since start of sweep\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 516,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 517,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +84,7 @@
        "Lambda(alpha, D*cos(alpha) - sqrt(-D**2*sin(alpha)**2 + R**2))"
       ]
      },
-     "execution_count": 517,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 518,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +107,7 @@
        "D*sin(alpha)**2 + sqrt(-D**2*sin(alpha)**2 + R**2)*cos(alpha)"
       ]
      },
-     "execution_count": 518,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 519,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +130,7 @@
        "(D*cos(alpha) - sqrt(-D**2*sin(alpha)**2 + R**2))*sin(alpha)"
       ]
      },
-     "execution_count": 519,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 520,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +153,7 @@
        "asin((D*cos(alpha) - sqrt(-D**2*sin(alpha)**2 + R**2))*sin(alpha)/R)"
       ]
      },
-     "execution_count": 520,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 521,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 522,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 523,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +201,7 @@
        "Lambda(alpha, asin((D*cos(alpha) - sqrt(-D**2*sin(alpha)**2 + R**2))*sin(alpha)/R))"
       ]
      },
-     "execution_count": 523,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 524,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +226,7 @@
        "Lambda(t, omega*t + asin(R/D))"
       ]
      },
-     "execution_count": 524,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 525,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,12 +267,14 @@
     "moonRadius = 1737.5          # Moon radius (km)\n",
     "\n",
     "# Dictionary for substitution into analytic formulas:\n",
-    "earthMoonSystem = {D: distanceEarthMoon, R: moonRadius, c: speedOfLight}\n"
+    "earthMoonSystem = {D: distanceEarthMoon, \n",
+    "                   R: moonRadius, \n",
+    "                   c: speedOfLight}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 527,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +286,7 @@
        "Lambda(alpha, asin(0.000575539568345324*(-382500.0*sqrt(2.06341578025546e-5 - sin(alpha)**2) + 382500.0*cos(alpha))*sin(alpha)))"
       ]
      },
-     "execution_count": 527,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -315,10 +322,10 @@
     {
      "data": {
       "text/plain": [
-       "<sympy.plotting.backends.matplotlibbackend.matplotlib.MatplotlibBackend at 0x113614bf0>"
+       "<sympy.plotting.backends.matplotlibbackend.matplotlib.MatplotlibBackend at 0x11bd217f0>"
       ]
      },
-     "execution_count": 528,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 529,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -349,10 +356,10 @@
     {
      "data": {
       "text/plain": [
-       "<sympy.plotting.backends.matplotlibbackend.matplotlib.MatplotlibBackend at 0x11ec6b560>"
+       "<sympy.plotting.backends.matplotlibbackend.matplotlib.MatplotlibBackend at 0x11be4e300>"
       ]
      },
-     "execution_count": 529,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 530,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +386,7 @@
        "-2*asin(R/D)/T"
       ]
      },
-     "execution_count": 530,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 531,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +411,7 @@
        "Lambda(t, t + (D*cos(omega*t + asin(R/D)) - sqrt(-D**2*sin(omega*t + asin(R/D))**2 + R**2))/c)"
       ]
      },
-     "execution_count": 531,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 532,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +435,7 @@
        "D*sqrt(1 - R**2/D**2)/c"
       ]
      },
-     "execution_count": 532,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 533,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 534,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -473,10 +480,10 @@
     {
      "data": {
       "text/plain": [
-       "<sympy.plotting.backends.matplotlibbackend.matplotlib.MatplotlibBackend at 0x1105f8650>"
+       "<sympy.plotting.backends.matplotlibbackend.matplotlib.MatplotlibBackend at 0x11b5e7a10>"
       ]
      },
-     "execution_count": 534,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +493,8 @@
     "sweepDuration = 0.01          # Sweep duration in seconds\n",
     "\n",
     "# Dictionary for replacing values into formulas\n",
-    "sweepDynamic = {T: sweepDuration, omega: angularSpeed}\n",
+    "sweepDynamic = {T: sweepDuration, \n",
+    "                omega: angularSpeed}\n",
     "\n",
     "# Get Moon arrival time as function of time (= departure time from Earth)\n",
     "arrivalTimeMoon = arrivalTime.evalf(subs=sweepDynamic).evalf(subs=earthMoonSystem).evalf(subs=sweepDynamic)\n",
@@ -510,14 +518,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 535,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shortest arrival time: 0.00172617864030599\n"
+      "Shortest arrival time: 1.27234301195706\n"
      ]
     },
     {
@@ -533,10 +541,10 @@
     {
      "data": {
       "text/plain": [
-       "<sympy.plotting.backends.matplotlibbackend.matplotlib.MatplotlibBackend at 0x111f69520>"
+       "<sympy.plotting.backends.matplotlibbackend.matplotlib.MatplotlibBackend at 0x11ba42ed0>"
       ]
      },
-     "execution_count": 535,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +554,7 @@
     "# Need to set starting range > 0 because derivative is (-) infinite at t = 0\n",
     "# Issue: some sweep times result in numerical overflows for certain calculations\n",
     "\n",
-    "shortestArrivalTime = nsolve(diff(arrivalTimeMoon(t)), (maxDupTime*0.001, maxDupTime*1.001))\n",
+    "shortestArrivalTime = arrivalTimeMoon(nsolve(diff(arrivalTimeMoon(t)), (maxDupTime*0.1, maxDupTime*1.1)))\n",
     "print('Shortest arrival time:', shortestArrivalTime)\n",
     "\n",
     "plot(diff(arrivalTimeMoon(t), t), (t, maxDupTime*0.1, maxDupTime*1.1))"
@@ -554,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 536,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -570,10 +578,10 @@
     {
      "data": {
       "text/plain": [
-       "<sympy.plotting.backends.matplotlibbackend.matplotlib.MatplotlibBackend at 0x111eb81a0>"
+       "<sympy.plotting.backends.matplotlibbackend.matplotlib.MatplotlibBackend at 0x11bc7d160>"
       ]
      },
-     "execution_count": 536,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 537,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -601,10 +609,10 @@
     {
      "data": {
       "text/plain": [
-       "<sympy.plotting.backends.matplotlibbackend.matplotlib.MatplotlibBackend at 0x111dcaa20>"
+       "<sympy.plotting.backends.matplotlibbackend.matplotlib.MatplotlibBackend at 0x11bce3bc0>"
       ]
      },
-     "execution_count": 537,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,8 +623,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following graph shows the laser spot arrival time vs the spot's Moon lattitude. \n",
+    "The graph illustrates that there is an initial phase where each arrival time has two laser spots at different lattitudes.\n",
+    "This is a parametric plot where the parameter is the start time, i.e. at what time the light left the laser pointer that arrived on the Moon surface. \n",
+    "\n",
+    "This shows the following:\n",
+    "- There is an initial single spot on the moon (shortest arrival time)\n",
+    "- This spot then splits into two spots:\n",
+    "- - One spot moving left, with corresponding start time going backwards towards 0\n",
+    "- - One spot moving right, with corresponding start time going forward"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 538,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -632,10 +655,10 @@
     {
      "data": {
       "text/plain": [
-       "<sympy.plotting.backends.matplotlibbackend.matplotlib.MatplotlibBackend at 0x113ad7e30>"
+       "<sympy.plotting.backends.matplotlibbackend.matplotlib.MatplotlibBackend at 0x11be095e0>"
       ]
      },
-     "execution_count": 538,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +668,7 @@
     "sweepAngleMoon = sweepAngle.evalf(subs=sweepDynamic).evalf(subs=earthMoonSystem).evalf(subs=sweepDynamic)\n",
     "plot_parametric(arrivalTimeMoon(t), (180.0/pi)*surfaceAngleMoon(sweepAngleMoon(t)), (t, 0, sweepDuration), \n",
     "                legend=True,\n",
-    "                label='Parametric plot: Angle (moon centric) vs Arrival Time, for time',\n",
+    "                label='Parametric plot: Angle (Moon lattitude) vs Arrival Time, for start time',\n",
     "                xlabel='Arrival Time [s]', ylabel='Moon centric angle [deg]' )\n"
    ]
   }
